# kybes-bot

./: .gitignore  Cargo.toml  README.md  dev-snippets.txt  launch
src/: config.rs  main.rs
src/commands/: alias.rs  cat.rs  deepseek.rs  github.rs  mc_server.rs  misc.rs  mod.rs  morse.rs  reminders.rs  system.rs  youtube.rs
src/utils/: bot.rs  git.rs  mod.rs
src/utils/server/: mod.rs  ping.rs  string.rs  varint.rs
