[package]
name = "kybes-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }

serenity = "0.12.4"
poise = "0.6.1"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

chrono = "0.4.41"
chrono-tz = "0.10.3"

reqwest = { version = "0.12.20", features = ["json", "gzip", "stream"] }
regex = "1.11.1"
thiserror = "2.0.12"
once_cell = "1.21.3"
trust-dns-resolver = "0.23.2"
base64 = "0.22.1"
humantime = "2.2.0"
